--- a/package.json
+++ b/package.json
@@ -21,15 +21,21 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
-    "@ionic-native/android-permissions": "^5.31.1",
+    "@ionic-native/android-permissions": "^5.32.1",
+    "@ionic-native/base64-to-gallery": "^5.32.1",
     "@ionic-native/core": "^5.32.1",
+    "@ionic-native/file": "^5.32.1",
+    "@ionic-native/image-picker": "^5.32.1",
     "@ionic-native/onesignal": "^5.32.1",
+    "@ionic-native/social-sharing": "^5.32.1",
     "@ionic/angular": "^5.5.2",
     "cordova-android": "9.1.0",
+    "dom-to-image": "^2.6.0",
     "dom-to-image-more": "^2.8.0",
     "firebase": "^8.3.1",
     "html2canvas": "^1.0.0-rc.7",
     "lottie-web": "^5.7.8",
+    "ngx-color-picker": "^11.0.0",
     "ngx-lottie": "^6.4.0",
     "rxjs": "~6.6.0",
     "save": "^2.4.0",
@@ -47,13 +53,20 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cordova-base64-to-gallery": "^4.1.3",
     "cordova-plugin-android-permissions": "^1.1.2",
+    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "^2.3.6",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "^6.0.3",
+    "es6-promise-plugin": "^4.2.2",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.2.0",
@@ -80,7 +93,12 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "onesignal-cordova-plugin": {}
+      "onesignal-cordova-plugin": {},
+      "cordova-base64-to-gallery": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
     "platforms": [
       "android"
